added h1 and p tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Minecraft is good</h1>
+    <p>The server Hoplite is fun.</p>
 </body>
 </html>
