Linked styles to index
Liked Styles to index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Minecraft is good</h1>
-    <p>The server Hoplite is fun.</p>
+    <header>
+        <h1>Welcome to my Website!</h1>
+    </header>
+    <main>
+        <h2>I don't know what to put here yet!</h2>
+    </main>
+    <footer>
+        <p>Website of Mason Hite</p>
+    </footer>
 </body>
+
 </html>
