--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description"
+        content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and proffesional service!" />
+    <link rel="stylesheet" href="styles.css">
+    <title>Hite Works | Landscaping, Manual Labor, and Construction</title>
 </head>
 
 <body>
     <header>
-        <h1>Welcome to my Website!</h1>
+        <h1>Welcome to the official website of Hite Works!</h1>
     </header>
     <main>
-        <h2>I don't know what to put here yet!</h2>
+        <h2></h2>
     </main>
     <footer>
-        <p>Website of Mason Hite</p>
+        <p>&copy; 2025 Hite Works.com </p>
     </footer>
 </body>
 
