--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <h1>Welcome to the official website of Hite Works!</h1>
     </header>
     <main>
-        <h2></h2>
+        <h2> </h2>
     </main>
     <footer>
-        <p>&copy; 2025 Hite Works.com </p>
+        <p>&copy; <strong>2025 Hite Works.com</strong></p>
     </footer>
 </body>
 
