Made significant changes to index and styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,31 @@
         <h1>Welcome to the official website of Hite Works!</h1>
     </header>
     <main>
-        <h2> </h2>
+        <img src="Logo.png" alt="HITE WORKS LOGO" width="225px">
+        <!--Get a new logo that isn't "HITTE WORKS *cries*"-->
+        <h2> Professional Manual Labor, Small Construction, and Landscaping Company.</h2>
+        <h3> Services: </h3>
+        <ul>
+            <!--Need to finalize this list-->
+            <li>Lawn care and maintenance</li>
+            <li>Tree and shrub planting</li>
+            <li>Junk removal</li>
+            <li>Hydroseeding and lawn installation</li>
+            <li>Soil preparation and topsoil application</li>
+            <li>retaining walls and walkways</li>
+            <li>Gravel driveways</li>
+            <li>seasonal planting and transplanting</li>
+            <li>Tree and shrub trimming</li>
+            <li>Moss and weed control</li>
+            <li>Flower bed design</li>
+            <li>Pressure washing for driveways, decks, houses, cars, and outdoor surfaces</li>
+        </ul>
+        <h3> Contact Methods:</h3>
+        <ul>
+            <!-- Need to add Phone Number-->
+            <li> Email: MasonHite7@gmail.com</li>
+            <li> Phone Number: </li>
+        </ul>
     </main>
     <footer>
         <p>&copy; <strong>2025 Hite Works.com</strong></p>
