improved text sizes and floated the logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <img src="Logo.png" alt="HITE WORKS LOGO" width="225px">
         <!--Get a new logo that isn't "HITTE WORKS *cries*"-->
-        <h2> Professional Manual Labor, Small Construction, and Landscaping Company.</h2>
+        <h2> Professional Manual Labor, Small Construction, and Landscaping.</h2>
         <h3> Services: </h3>
         <ul>
             <!--Need to finalize this list-->
@@ -38,7 +38,7 @@
         <ul>
             <!-- Need to add Phone Number-->
             <li> Email: MasonHite7@gmail.com</li>
-            <li> Phone Number: </li>
+            <li> Phone Number: 360-349-2097</li>
         </ul>
     </main>
     <footer>
