--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Welcome to the official website of HiteWorks!</h1>
     </header>
     <main>
-        <img src="Logo.png" alt="HITE WORKS LOGO" width="225px">
+        <img src="HiteWorksLogo4.png" alt="HITEWORKS LOGO" width="250px">
         <!--Get a new logo that isn't "HITTE WORKS *cries*"-->
         <h2> Professional Manual Labor, Small Construction, and Landscaping.</h2>
         <h3> Services: </h3>
