Changes for Mod4 Assignment (styles changes)

--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
             <li>Pressure washing for driveways, decks, houses, cars, and outdoor surfaces</li>
         </ul>
         <h3> Contact Methods:</h3>
+        <div class="contacts">
         <ul>
             <!-- Need to add Phone Number-->
             <li> Email: MasonHite7@gmail.com</li>
             <li> Phone Number: 360-349-2097</li>
         </ul>
+        </div>
     </main>
     <footer>
         <p>&copy; <strong>2025 HiteWorks.com</strong></p>
