--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <main>
         <h2> Professional Manual Labor, Small Construction, and Landscaping.</h2>
         <h3> Services: </h3>
-        <img src="HiteWorksLogo4.png" alt="HITEWORKS LOGO" width="367px">
-        <ul>
+        <img src="HiteWorksLogo4.png" alt="HITEWORKS LOGO" width="366px" id="HITEWORKS">
+        <div id="services">
             <!--Need to finalize this list-->
             <li>Lawn care and maintenance</li>
             <li>Tree and shrub planting</li>
@@ -32,13 +32,14 @@
             <li>Flower bed design</li>
             <li>Pressure washing for driveways, decks, houses, cars, and outdoor surfaces</li>
         </ul>
+        </div>
+        </main>
         <h3> Contact Methods:</h3>
-        <div class="contacts">
-        <ul>
-            <!-- Need to add Phone Number-->
-            <li> Email: MasonHite7@gmail.com</li>
-            <li> Phone Number: 360-349-2097</li>
-        </ul>
+        <div id="contacts">
+            <ul>
+                <li> Email: MasonHite7@gmail.com</li>
+                <li> Phone Number: 360-349-2097</li>
+            </ul>
         </div>
     </main>
     <footer>
