--- a/index.html
+++ b/index.html
@@ -19,21 +19,20 @@
         <h3> Services: </h3>
         <img src="HiteWorksLogo4.png" alt="HITEWORKS LOGO" width="366px" id="HITEWORKS">
         <div id="services">
-            <!--Need to finalize this list-->
-            <li>Lawn care and maintenance</li>
-            <li>Tree and shrub planting</li>
-            <li>Junk removal</li>
-            <li>Soil preparation and topsoil application</li>
-            <li>retaining walls and walkways</li>
-            <li>Gravel driveways</li>
-            <li>seasonal planting and transplanting</li>
-            <li>Tree and shrub trimming</li>
-            <li>Moss and weed control</li>
-            <li>Flower bed design</li>
-            <li>Pressure washing for driveways, decks, houses, cars, and outdoor surfaces</li>
-        </ul>
+            <ul>
+                <!--Need to finalize this list-->
+                <li>Lawn care and maintenance</li>
+                <li>Tree and shrub planting</li>
+                <li>Junk removal</li>
+                <li>Soil preparation and topsoil application</li>
+                <li>Retaining walls and walkways</li>
+                <li>Gravel driveways</li>
+                <li>Tree and shrub trimming</li>
+                <li>Moss and weed control</li>
+                <li>Flower bed design</li>
+                <li>Pressure washing for driveways, decks, houses, cars, and outdoor surfaces</li>
+            </ul>
         </div>
-        </main>
         <h3> Contact Methods:</h3>
         <div id="contacts">
             <ul>
