Moved images to their own folder

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <h2> Professional Manual Labor, Small Construction, and Landscaping.</h2>
         <h3> Services: </h3>
-        <img src="HiteWorksLogo4.png" alt="HITEWORKS LOGO" width="366px" id="HITEWORKS">
+        <img src="Images/HiteWorksLogo4.png" alt="HITEWORKS LOGO" width="366px" id="HITEWORKS">
         <div id="services">
             <ul>
                 <!--Need to finalize this list-->
