Added future hyperlinks and second page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     </header>
     <main>
         <h2> Professional Manual Labor, Small Construction, and Landscaping.</h2>
+        <nav>
+            <a href="about.html">About Us!</a>
+            <a href="">FILLER</a>
+            <a href="">FILLER</a>
+            <a href="">FILLER</a>
+        </nav>
         <h3> Services: </h3>
         <img src="Images/HiteWorksLogo4.png" alt="HITEWORKS LOGO" width="366px" id="HITEWORKS">
         <div id="services">
