fixed file names and footer size

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="">FILLER</a>
         </nav>
         <h3> Services: </h3>
-        <img src="Images/HiteWorksLogo4.png" alt="HITEWORKS LOGO" width="366px" id="HITEWORKS">
+        <img src="images/hiteworks-logo4.png" alt="HITEWORKS LOGO" width="366px" id="HITEWORKS">
         <div id="services">
             <ul>
                 <!--Need to finalize this list-->
