Added and linked styles2 to about

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and proffesional service!" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles1.css">
     <title>HiteWorks | Landscaping, Manual Labor, and Construction</title>
 </head>
 
