--- a/about.html
+++ b/about.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles2.css">
     <title>HiteWorks | About Us</title>
+    <link rel="stylesheet" href="styles2.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1>About Us</h1>
+    </header>
+    <h2>
+        <div class="columns">
+            <div class="column">Column 1</div>
+            <div class="column">Column 2</div>
+            <div class="column">Column 3</div>
+        </div>
+    </h2>
+    <div class="image-landscape">
+        <img src="images/landscape-background.png">
+    </div>
+
 </body>
+
 </html>
