--- a/about.html
+++ b/about.html
@@ -6,23 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HiteWorks | About Us</title>
     <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="navigation.css">
 </head>
 
 <body>
     <header>
         <h1>About Us</h1>
     </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+    </nav>
     <h2>
         <div class="columns">
-            <div class="column">Column 1</div>
-            <div class="column">Column 2</div>
-            <div class="column">Column 3</div>
+            <div class="column">
+                <div class="name-box">
+                    <h3>Mason Hite</h3>
+                </div>
+                <div class="info-box">
+                    <p>Some info about Mason</p>
+                </div>
+            </div>
+            <div class="column">
+                <div class="name-box">
+                    <h3>Daniel Hite</h3>
+                </div>
+                <div class="info-box">
+                    <p>Some info about Daniel</p>
+                </div>
+            </div>
+            <div class="column">
+                <div class="name-box">
+                    <h3>Hudson Hite</h3>
+                </div>
+                <div class="info-box">
+                    <p>Some info about Hudson</p>
+                </div>
+            </div>
         </div>
+
     </h2>
-    <div class="image-landscape">
-        <img src="images/landscape-background.png">
-    </div>
 
 </body>
+
+<footer>
+    <p>&copy; <strong>2025 HiteWorks.com</strong></p>
+</footer>
 
 </html>
