--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and proffesional service!" />
+        content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and professional service!" />
     <link rel="stylesheet" href="styles1.css">
+    <link rel="stylesheet" href="navigation.css"> <!-- Fixed rel attribute -->
     <title>HiteWorks | Landscaping, Manual Labor, and Construction</title>
 </head>
 
@@ -15,18 +16,15 @@
         <h1>Welcome to the official website of HiteWorks!</h1>
     </header>
     <main>
-        <h2> Professional Manual Labor, Small Construction, and Landscaping.</h2>
+        <h2>Professional Manual Labor, Small Construction, and Landscaping.</h2>
         <nav>
-            <a href="about.html">About Us!</a>
-            <a href="">FILLER</a>
-            <a href="">FILLER</a>
-            <a href="">FILLER</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
         </nav>
-        <h3> Services: </h3>
+        <h3>Services:</h3>
         <img src="images/hiteworks-logo4.png" alt="HITEWORKS LOGO" width="366px" id="HITEWORKS">
         <div id="services">
             <ul>
-                <!--Need to finalize this list-->
                 <li>Lawn care and maintenance</li>
                 <li>Tree and shrub planting</li>
                 <li>Junk removal</li>
@@ -39,11 +37,11 @@
                 <li>Pressure washing for driveways, decks, houses, cars, and outdoor surfaces</li>
             </ul>
         </div>
-        <h3> Contact Methods:</h3>
+        <h3>Contact Methods:</h3>
         <div id="contacts">
             <ul>
-                <li> Email: MasonHite7@gmail.com</li>
-                <li> Phone Number: 360-349-2097</li>
+                <li>Email: MasonHite7@gmail.com </li>
+                <li>Phone Number: 360-349-2097</li>
             </ul>
         </div>
     </main>
