Fixed breakage for image on Home page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li>Tree and shrub trimming</li>
                 <li>Moss and weed control</li>
                 <li>Flower bed design</li>
-                <li>Pressure washing for driveways, decks, houses, cars, and outdoor surfaces</li>
+                <li>Pressure washing for driveways, decks, <br> houses, cars, and outdoor surfaces</li>
             </ul>
         </div>
         <h3>Contact Methods:</h3>
