--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HiteWorks | About Us</title>
-    <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="about-styles.css">
     <link rel="stylesheet" href="navigation.css">
 </head>
 
@@ -16,6 +16,8 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
     </nav>
     <h2>
         <div class="columns">
