--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and professional service!" />
-    <link rel="stylesheet" href="styles1.css">
-    <link rel="stylesheet" href="navigation.css"> <!-- Fixed rel attribute -->
+    <link rel="stylesheet" href="index-styles.css">
+    <link rel="stylesheet" href="navigation.css">
     <title>HiteWorks | Landscaping, Manual Labor, and Construction</title>
 </head>
 
@@ -20,23 +20,11 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
         </nav>
-        <h3>Services:</h3>
         <img src="images/hiteworks-logo4.png" alt="HITEWORKS LOGO" width="366px" id="HITEWORKS">
-        <div id="services">
-            <ul>
-                <li>Lawn care and maintenance</li>
-                <li>Tree and shrub planting</li>
-                <li>Junk removal</li>
-                <li>Soil preparation and topsoil application</li>
-                <li>Retaining walls and walkways</li>
-                <li>Gravel driveways</li>
-                <li>Tree and shrub trimming</li>
-                <li>Moss and weed control</li>
-                <li>Flower bed design</li>
-                <li>Pressure washing for driveways, decks, <br> houses, cars, and outdoor surfaces</li>
-            </ul>
-        </div>
+       
         <h3>Contact Methods:</h3>
         <div id="contacts">
             <ul>
