Significant changes to index.html

--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
         <a href="contact.html">Contact</a>
     </nav>
     <h2>
+        <!--Add info about each person-->
         <div class="columns">
             <div class="column">
                 <div class="name-box">
