--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>HiteWorks | Contact</title>
-    <link rel="stylesheet" href="navigation.css"
+    <link rel="stylesheet" href="navigation.css">
+    <link rel="stylesheet" href="contact-styles.css">
 </head>
 
 <body>
@@ -15,6 +16,16 @@
         <a href="contact.html">Contact</a>
     </nav>
     <h1>Contact</h1>
+    <h3>Contact Methods:</h3>
+    <div id="contacts">
+        <ul>
+            <li>Email: MasonHite7@gmail.com </li>
+            <li>Phone Number: 360-349-2097</li>
+        </ul>
+    </div>
 </body>
+<footer>
+    <p>&copy; <strong>2025 HiteWorks.com</strong></p>
+</footer>
 
 </html>
