--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
             <a href="services.html">Services</a>
             <a href="contact.html">Contact</a>
         </nav>
-        <img src="images/hiteworks-logo4.png" alt="HITEWORKS LOGO" width="366px" id="HITEWORKS">
-       
-        <h3>Contact Methods:</h3>
-        <div id="contacts">
-            <ul>
-                <li>Email: MasonHite7@gmail.com </li>
-                <li>Phone Number: 360-349-2097</li>
-            </ul>
+        <img src="images/hiteworks-logo4.png">
+        <!--Find more natural way to incorporate this text-->
+        <h3>At HiteWorks, we embrace sustainable landscaping by prioritizing native plants <br> and water-conscious
+            designs that enrich the environment while preserving natural resources.</h3>
+        <div class="center-links">
+            <a href="https://www.epa.gov/watersense" target="_blank">EPA Water Conservation</a> <!--"_blank" opens link in seperate window-->
+            <a href="https://www.nwf.org/Garden-for-Wildlife/About/Native-Plants" target="_blank">Native Plants
+                Guide</a>
+            <a href="https://garden.org/" target="_blank">National Gardening Association</a>
         </div>
     </main>
     <footer>
