--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Services</h1>
+        <h1 id="top"> Services</h1>
     </header>
     <main>
         <nav>
@@ -58,6 +58,8 @@
         </section>
     </main>
     <footer>
+        <h3>What are you doing down here? Get back up!</h3>
+        <a id="backtotop" href="#top">Back to Top</a>
         <p>&copy; <strong>2025 HiteWorks.com</strong></p>
     </footer>
 </body>
