--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
         <a href="about.html">About Us</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
+        <a href="values.html">Values</a>
     </nav>
     <h2>
         <!--Add info about each person-->
