--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <title>HiteWorks | Contact</title>
-    <link rel="stylesheet" href="navigation.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and professional service!" />
     <link rel="stylesheet" href="contact-styles.css">
+    <link rel="stylesheet" href="navigation.css">
+    <title>HiteWorks | Landscaping, Manual Labor, and Construction</title>
 </head>
 
 <body>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-    <h1>Contact</h1>
-    <h3>Contact Methods:</h3>
-    <div id="contacts">
-        <ul>
-            <li>Email: MasonHite7@gmail.com </li>
-            <li>Phone Number: 360-349-2097</li>
-        </ul>
-    </div>
+    <header>
+        <h1>Welcome to the official website of HiteWorks!</h1>
+    </header>
+    <main>
+        <h2>Professional Manual Labor, Small Construction, and Landscaping.</h2>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
+            <a href="values.html">Values</a>
+        </nav>
+        <img src="images/hiteworks-logo4.png">
+        <!--Find more natural way to incorporate this text-->
+        <h3>At HiteWorks, we embrace sustainable landscaping by prioritizing native plants <br> and water-conscious
+            designs that enrich the environment while preserving natural resources.</h3>
+        <div class="center-links">
+            <a href="https://www.epa.gov/watersense" target="_blank">EPA Water Conservation</a>
+            <!--"_blank" opens link in seperate window-->
+            <a href="https://www.nwf.org/Garden-for-Wildlife/About/Native-Plants" target="_blank">Native Plants
+                Guide</a>
+            <a href="https://garden.org/" target="_blank">National Gardening Association</a>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; <strong>2025 HiteWorks.com</strong></p>
+    </footer>
 </body>
-<footer>
-    <p>&copy; <strong>2025 HiteWorks.com</strong></p>
-</footer>
 
 </html>
