--- a/html/contact.html
+++ b/html/contact.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and professional service!" />
-    <link rel="stylesheet" href="contact-styles.css">
-    <link rel="stylesheet" href="navigation.css">
+    <link rel="stylesheet" href="/css/contact-styles.css">
+    <link rel="stylesheet" href="/css/navigation.css">
     <title>HiteWorks | Landscaping, Manual Labor, and Construction</title>
 </head>
 
 <body>
     <header>
-        <h1>Welcome to the official website of HiteWorks!</h1>
+        <h1>Contact</h1>
     </header>
     <main>
-        <h2>Professional Manual Labor, Small Construction, and Landscaping.</h2>
+        <h2>Contact Methods</h2>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -24,10 +24,12 @@
             <a href="contact.html">Contact</a>
             <a href="values.html">Values</a>
         </nav>
-        <img src="images/hiteworks-logo4.png">
-        <!--Find more natural way to incorporate this text-->
+        <!--Temperary logo image. Will be removed.-->
+        <img src="/images/hiteworks-logo4.png">
+        <!--Will be moved to "values.html"-->
         <h3>At HiteWorks, we embrace sustainable landscaping by prioritizing native plants <br> and water-conscious
             designs that enrich the environment while preserving natural resources.</h3>
+            <!--Links to be moved to "values.html"-->
         <div class="center-links">
             <a href="https://www.epa.gov/watersense" target="_blank">EPA Water Conservation</a>
             <!--"_blank" opens link in seperate window-->
