--- a/html/services.html
+++ b/html/services.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <title>HiteWorks | Services</title>
-    <link rel="stylesheet" href="navigation.css">
-    <link rel="stylesheet" href="services-styles.css">
+    <link rel="stylesheet" href="/css/navigation.css">
+    <link rel="stylesheet" href="/css/services-styles.css">
 </head>
 
 <body>
     <header>
-        <h1 id="top"> Services</h1>
+        <h1>Services</h1>
     </header>
     <main>
         <nav>
@@ -20,6 +20,7 @@
             <a href="contact.html">Contact</a>
             <a href="values.html">Values</a>
         </nav>
+        <!--Maybe add an page for each kind of job with some info about it?-->
         <section id="services">
             <div class="services-grid">
                 <div class="service-card">
@@ -59,8 +60,6 @@
         </section>
     </main>
     <footer>
-        <h3>What are you doing down here? Get back up!</h3>
-        <a id="backtotop" href="#top">Back to Top</a>
         <p>&copy; <strong>2025 HiteWorks.com</strong></p>
     </footer>
 </body>
