--- a/html/values.html
+++ b/html/values.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>HiteWorks | Values</title>
-    <link rel="stylesheet" href="navigation.css">
+    <link rel="stylesheet" href="/css/navigation.css">
 </head>
 
 <body>
@@ -15,6 +15,7 @@
         <a href="contact.html">Contact</a>
         <a href="values.html">Values</a>
     </nav>
+    <h1>I didn't have time to make this page, but I will do it ASAP!</h1>
 </body>
 
 </html>
