--- a/html/contact.html
+++ b/html/contact.html
@@ -18,18 +18,18 @@
     <main>
         <h2>Contact Methods</h2>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
-            <a href="values.html">Values</a>
+            <a href="/index.html">Home</a>
+            <a href="/html/about.html">About Us</a>
+            <a href="/html/services.html">Services</a>
+            <a href="/html/contact.html">Contact</a>
+            <a href="/html/values.html">Values</a>
         </nav>
         <!--Temperary logo image. Will be removed.-->
         <img src="/images/hiteworks-logo4.png">
         <!--Will be moved to "values.html"-->
         <h3>At HiteWorks, we embrace sustainable landscaping by prioritizing native plants <br> and water-conscious
             designs that enrich the environment while preserving natural resources.</h3>
-            <!--Links to be moved to "values.html"-->
+        <!--Links to be moved to "values.html"-->
         <div class="center-links">
             <a href="https://www.epa.gov/watersense" target="_blank">EPA Water Conservation</a>
             <!--"_blank" opens link in seperate window-->
