--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 </div>
     <h3>Professional Manual Labor, Small Construction, and Landscaping. </h3>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="values.html">Values</a>
+        <a href="/index.html">Home</a>
+        <a href="html/about.html">About Us</a>
+        <a href="html/services.html">Services</a>
+        <a href="/html/contact.html">Contact</a>
+        <a href="/html/values.html">Values</a>
     </nav>
     <footer>
         <p>&copy; <strong>2025 HiteWorks.com</strong></p>
