--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <h3>Professional Manual Labor, Small Construction, and Landscaping. </h3>
     <nav>
         <a href="/index.html">Home</a>
-        <a href="html/about.html">About Us</a>
-        <a href="html/services.html">Services</a>
+        <a href="/html/about.html">About Us</a>
+        <a href="/html/services.html">Services</a>
         <a href="/html/contact.html">Contact</a>
         <a href="/html/values.html">Values</a>
     </nav>
