--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and professional service!" />
-    <link rel="stylesheet" href="/css/index-styles.css">
-    <link rel="stylesheet" href="/css/navigation.css">
+    <link rel="stylesheet" href="index-styles.css">
+    <link rel="stylesheet" href="navigation.css">
     <title>HiteWorks | Landscaping, Manual Labor, and Construction</title>
 </head>
 <body>
@@ -19,11 +19,11 @@
 </div>
     <h3>Professional Manual Labor, Small Construction, and Landscaping. </h3>
     <nav>
-        <a href="/index.html">Home</a>
-        <a href="/html/about.html">About Us</a>
-        <a href="/html/services.html">Services</a>
-        <a href="/html/contact.html">Contact</a>
-        <a href="/html/values.html">Values</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
+        <a href="values.html">Values</a>
     </nav>
     <footer>
         <p>&copy; <strong>2025 HiteWorks.com</strong></p>
