Still fixing directory issues

--- a/html/about.html
+++ b/html/about.html
@@ -14,11 +14,11 @@
         <h1>About Us</h1>
     </header>
     <nav>
-        <a href="../index.html">Home</a>
-        <a href="/html/about.html">About Us</a>
-        <a href="/html/services.html">Services</a>
-        <a href="/html/contact.html">Contact</a>
-        <a href="/html/values.html">Values</a>
+        <a href="index.html">Home</a>
+        <a href="html/about.html">About Us</a>
+        <a href="html/services.html">Services</a>
+        <a href="html/contact.html">Contact</a>
+        <a href="html/values.html">Values</a>
     </nav>
     <h2>
         <!--Add info about each person and maybe a picture of each person-->
