--- a/html/values.html
+++ b/html/values.html
@@ -9,11 +9,11 @@
 
 <body>
     <nav>
-        <a href="../index.html">Home</a>
-        <a href="/html/about.html">About Us</a>
-        <a href="/html/services.html">Services</a>
-        <a href="/html/contact.html">Contact</a>
-        <a href="/html/values.html">Values</a>
+        <a href="index.html">Home</a>
+        <a href="html/about.html">About Us</a>
+        <a href="html/services.html">Services</a>
+        <a href="html/contact.html">Contact</a>
+        <a href="html/values.html">Values</a>
     </nav>
     <h1>I didn't have time to make this page, but I will do it ASAP!</h1>
 </body>
