--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,24 +10,26 @@
     <link rel="stylesheet" href="/css/navigation.css">
     <title>HiteWorks | Landscaping, Manual Labor, and Construction</title>
 </head>
+
 <body>
     <div class="container">
-    <h1>HiteWorks</h1>
-    <h2>Bring Your Vision to Life</h2>
-    <div class="image-wrapper">
-        <img src="/images/upscalemedia-transformed.jpeg" alt="Contact Page Image">
-    </div> 
-</div>
+        <h1>HiteWorks</h1>
+        <h2>Bring Your Vision to Life</h2>
+        <div class="image-wrapper">
+            <img src="/images/upscalemedia-transformed.jpeg" alt="Contact Page Image">
+        </div>
+    </div>
     <h3>Professional Manual Labor, Small Construction, and Landscaping. </h3>
     <nav>
         <a href="index.html">Home</a>
-        <a href="/html/about.html">About Us</a>
-        <a href="/html/services.html">Services</a>
-        <a href="/html/contact.html">Contact</a>
-        <a href="/html/values.html">Values</a>
+        <a href="html/about.html">About Us</a>
+        <a href="html/services.html">Services</a>
+        <a href="html/contact.html">Contact</a>
+        <a href="html/values.html">Values</a>
     </nav>
     <footer>
         <p>&copy; <strong>2025 HiteWorks.com</strong></p>
     </footer>
 </body>
+
 </html>
