--- a/html/contact.html
+++ b/html/contact.html
@@ -18,11 +18,11 @@
     <main>
         <h2>Contact Methods</h2>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="html/about.html">About Us</a>
-            <a href="html/services.html">Services</a>
-            <a href="html/contact.html">Contact</a>
-            <a href="html/values.html">Values</a>
+            <a href="/my-website/index.html">Home</a>
+            <a href="/my-website/html/about.html">About Us</a>
+            <a href="/my-website/html/services.html">Services</a>
+            <a href="/my-website/html/contact.html">Contact</a>
+            <a href="/my-website/html/values.html">Values</a>
         </nav>
         <!--Temperary logo image. Will be removed.-->
         <img src="/images/hiteworks-logo4.png">
