--- a/html/services.html
+++ b/html/services.html
@@ -14,11 +14,11 @@
     </header>
     <main>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="html/about.html">About Us</a>
-            <a href="html/services.html">Services</a>
-            <a href="html/contact.html">Contact</a>
-            <a href="html/values.html">Values</a>
+            <a href="/my-website/index.html">Home</a>
+            <a href="/my-website/html/about.html">About Us</a>
+            <a href="/my-website/html/services.html">Services</a>
+            <a href="/my-website/html/contact.html">Contact</a>
+            <a href="/my-website/html/values.html">Values</a>
         </nav>
         <!--Maybe add an page for each kind of job with some info about it?-->
         <section id="services">
