--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     </div>
     <h3>Professional Manual Labor, Small Construction, and Landscaping. </h3>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="html/about.html">About Us</a>
-        <a href="html/services.html">Services</a>
-        <a href="html/contact.html">Contact</a>
-        <a href="html/values.html">Values</a>
+        <a href="/my-website/index.html">Home</a>
+        <a href="/my-website/html/about.html">About Us</a>
+        <a href="/my-website/html/services.html">Services</a>
+        <a href="/my-website/html/contact.html">Contact</a>
+        <a href="/my-website/html/values.html">Values</a>
     </nav>
     <footer>
         <p>&copy; <strong>2025 HiteWorks.com</strong></p>
