Still trying to fix issue with directories :C

--- a/html/about.html
+++ b/html/about.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HiteWorks | About Us</title>
-    <link rel="stylesheet" href="/css/about-styles.css">
-    <link rel="stylesheet" href="/css/navigation.css">
+    <link rel="stylesheet" href="/my-website/css/about-styles.css">
+    <link rel="stylesheet" href="/my-website/css/navigation.css">
 </head>
 
 <body>
