--- a/html/services.html
+++ b/html/services.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>HiteWorks | Services</title>
-    <link rel="stylesheet" href="/css/services-styles.css">
-    <link rel="stylesheet" href="/css/navigation.css">
+    <link rel="stylesheet" href="/my-website/css/services-styles.css">
+    <link rel="stylesheet" href="/my-website/css/navigation.css">
 </head>
 
 <body>
