--- a/html/values.html
+++ b/html/values.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>HiteWorks | Values</title>
-    <link rel="stylesheet" href="/css/navigation.css">
+    <link rel="stylesheet" href="/my-website/css/navigation.css">
 </head>
 
 <body>
