STILL fixing this bug

--- a/html/contact.html
+++ b/html/contact.html
@@ -25,7 +25,7 @@
             <a href="/my-website/html/values.html">Values</a>
         </nav>
         <!--Temperary logo image. Will be removed.-->
-        <img src="/images/hiteworks-logo4.png">
+        <img src="/my-website/images/hiteworks-logo4.png">
         <!--Will be moved to "values.html"-->
         <h3>At HiteWorks, we embrace sustainable landscaping by prioritizing native plants <br> and water-conscious
             designs that enrich the environment while preserving natural resources.</h3>
