--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>HiteWorks</h1>
         <h2>Bring Your Vision to Life</h2>
         <div class="image-wrapper">
-            <img src="/images/upscalemedia-transformed.jpeg" alt="Contact Page Image">
+            <img src="/my-website/images/upscalemedia-transformed.jpeg" alt="Home Page Image">
         </div>
     </div>
     <h3>Professional Manual Labor, Small Construction, and Landscaping. </h3>
