Added a / and removed /my-website/ from everything to make it work on live server. Hope it works on GitHub...

--- a/html/about.html
+++ b/html/about.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HiteWorks | About Us</title>
-    <link rel="stylesheet" href="/my-website/css/about-styles.css">
-    <link rel="stylesheet" href="/my-website/css/navigation.css">
+    <link rel="stylesheet" href="/css/about-styles.css">
+    <link rel="stylesheet" href="/css/navigation.css">
 </head>
 
 <body>
@@ -14,11 +14,11 @@
         <h1>About Us</h1>
     </header>
     <nav>
-        <a href="/my-website/index.html">Home</a>
-        <a href="/my-website/html/about.html">About Us</a>
-        <a href="/my-website/html/services.html">Services</a>
-        <a href="/my-website/html/contact.html">Contact</a>
-        <a href="/my-website/html/values.html">Values</a>
+        <a href="/index.html">Home</a>
+        <a href="/html/about.html">About Us</a>
+        <a href="/html/services.html">Services</a>
+        <a href="/html/contact.html">Contact</a>
+        <a href="/html/values.html">Values</a>
     </nav>
     <h2>
         <!--Add info about each person and maybe a picture of each person-->
