--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and professional service!" />
-    <link rel="stylesheet" href="/my-website/index-styles.css">
-    <link rel="stylesheet" href="/my-website/css/navigation.css">
+    <link rel="stylesheet" href="index-styles.css">
+    <link rel="stylesheet" href="css/navigation.css">
     <title>HiteWorks | Landscaping, Manual Labor, and Construction</title>
 </head>
 
@@ -16,16 +16,16 @@
         <h1>HiteWorks</h1>
         <h2>Bring Your Vision to Life</h2>
         <div class="image-wrapper">
-            <img src="/my-website/images/upscalemedia-transformed.jpeg" alt="Home Page Image">
+            <img src="/images/upscalemedia-transformed.jpeg" alt="Home Page Image">
         </div>
     </div>
     <h3>Professional Manual Labor, Small Construction, and Landscaping. </h3>
     <nav>
-        <a href="/my-website/index.html">Home</a>
-        <a href="/my-website/html/about.html">About Us</a>
-        <a href="/my-website/html/services.html">Services</a>
-        <a href="/my-website/html/contact.html">Contact</a>
-        <a href="/my-website/html/values.html">Values</a>
+        <a href="/index.html">Home</a>
+        <a href="/html/about.html">About Us</a>
+        <a href="/html/services.html">Services</a>
+        <a href="/html/contact.html">Contact</a>
+        <a href="/html/values.html">Values</a>
     </nav>
     <footer>
         <p>&copy; <strong>2025 HiteWorks.com</strong></p>
