--- a/html/values.html
+++ b/html/values.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8" />
     <title>HiteWorks | Values</title>
-    <link rel="stylesheet" href="/my-website/css/navigation.css">
+    <link rel="stylesheet" href="/css/navigation.css">
 </head>
 
 <body>
     <nav>
-        <a href="/my-website/index.html">Home</a>
-        <a href="/my-website/html/about.html">About Us</a>
-        <a href="/my-website/html/services.html">Services</a>
-        <a href="/my-website/html/contact.html">Contact</a>
-        <a href="/my-website/html/values.html">Values</a>
+        <a href="/index.html">Home</a>
+        <a href="/html/about.html">About Us</a>
+        <a href="/html/services.html">Services</a>
+        <a href="/html/contact.html">Contact</a>
+        <a href="/html/values.html">Values</a>
     </nav>
     <h1>I didn't have time to make this page, but I will do it ASAP!</h1>
 </body>
