--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and professional service!" />
-    <link rel="stylesheet" href="/css/contact-styles.css">
-    <link rel="stylesheet" href="/css/navigation.css">
+    <link rel="stylesheet" href="contact-styles.css">
+    <link rel="stylesheet" href="navigation.css">
     <title>HiteWorks | Landscaping, Manual Labor, and Construction</title>
 </head>
 
@@ -18,14 +18,14 @@
     <main>
         <h2>Contact Methods</h2>
         <nav>
-            <a href="/index.html">Home</a>
-            <a href="/html/about.html">About Us</a>
-            <a href="/html/services.html">Services</a>
-            <a href="/html/contact.html">Contact</a>
-            <a href="/html/values.html">Values</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
+            <a href="values.html">Values</a>
         </nav>
         <!--Temperary logo image. Will be removed.-->
-        <img src="/images/hiteworks-logo4.png">
+        <img src="images/hiteworks-logo4.png">
         <!--Will be moved to "values.html"-->
         <h3>At HiteWorks, we embrace sustainable landscaping by prioritizing native plants <br> and water-conscious
             designs that enrich the environment while preserving natural resources.</h3>
