Fixed most breakpoints for all pages but Contact and Values

--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>HiteWorks</h1>
-        <h2>Bring Your Vision to Life</h2>
-        <div class="image-wrapper">
-            <img src="images/upscalemedia-transformed.jpeg" alt="Home Page Image">
-        </div>
-    </div>
-    <h3>Professional Manual Labor, Small Construction, and Landscaping. </h3>
+
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
@@ -27,9 +20,22 @@
         <a href="contact.html">Contact</a>
         <a href="values.html">Values</a>
     </nav>
+
+    <div class="nav-spacer"></div>
+
+    <div class="container">
+        <h1>HiteWorks</h1>
+        <h2>Bring Your Vision to Life</h2>
+        <div class="image-wrapper">
+            <img src="images/upscalemedia-transformed.jpeg" alt="Home Page Image">
+        </div>
+        <h3>Professional Manual Labor, Small Construction, and Landscaping. </h3>
+    </div>
+
     <footer>
         <p>&copy; <strong>2025 HiteWorks.com</strong></p>
     </footer>
+
 </body>
 
 </html>
