--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>About Us</h1>
+        <h1>Meet Our Team</h1>
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -20,102 +20,100 @@
         <a href="contact.html">Contact</a>
         <a href="values.html">Values</a>
     </nav>
-    <h2>
-        <!--Add info about each person and maybe a picture of each person-->
-        <div class="columns">
-            <div class="column">
-                <div class="name-box">
-                    <h3>Mason Hite</h3>
-                </div>
-                <div class="info-box">
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-                </div>
+    <!--Add info about each person and maybe a picture of each person-->
+    <div class="columns">
+        <div class="column">
+            <div class="name-box">
+                <h3>Mason Hite</h3>
             </div>
-            <div class="column">
-                <div class="name-box">
-                    <h3>Daniel Hite</h3>
-                </div>
-                <div class="info-box">
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+            <div class="info-box">
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
 
-                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
 
-                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
 
-                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-                </div>
-            </div>
-            <div class="column">
-                <div class="name-box">
-                    <h3>Hudson Hite</h3>
-                </div>
-                <div class="info-box">
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-                        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
-                        pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
-                        sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
-                        nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
-                        sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-                </div>
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
             </div>
         </div>
+        <div class="column">
+            <div class="name-box">
+                <h3>Daniel Hite</h3>
+            </div>
+            <div class="info-box">
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
 
-    </h2>
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            </div>
+        </div>
+        <div class="column">
+            <div class="name-box">
+                <h3>Hudson Hite</h3>
+            </div>
+            <div class="info-box">
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
+                    pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean
+                    sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa
+                    nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti
+                    sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            </div>
+        </div>
+    </div>
+
 
     <footer>
         <p>&copy; <strong>2025 HiteWorks.com</strong></p>
