Made the work.html folder with Carousel and made values.html much better. also made footer part of styles.css which is currently nav and footer which apply to all html files.

--- a/services.html
+++ b/services.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8" />
     <title>HiteWorks | Services</title>
     <link rel="stylesheet" href="services-styles.css">
-    <link rel="stylesheet" href="navigation.css">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/1f10ccfe66.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,42 +23,49 @@
             <a href="services.html">Services</a>
             <a href="contact.html">Contact</a>
             <a href="values.html">Values</a>
+            <a href="work.html">Our Work</a>
         </nav>
         <!--Maybe add an page for each kind of job with some info about it?-->
         <section id="services">
             <div class="services-grid">
                 <div class="service-card">
-                    <h3>Lawn Care and Maintenance</h3>
+                    <h3><i class="fa-solid fa-leaf"></i> Lawn Care and Maintenance <i class="fa-solid fa-leaf"></i></h3>
                 </div>
                 <div class="service-card">
-                    <h3>Tree and Shrub Planting</h3>
+                    <h3><i class="fa-solid fa-tree"></i> Tree and Shrub Planting <i class="fa-solid fa-tree"></i></h3>
                 </div>
                 <div class="service-card">
-                    <h3>Junk Removal</h3>
+                    <h3><i class="fa-solid fa-trash"></i> Junk Removal <i class="fa-solid fa-trash"></i></h3>
                 </div>
                 <div class="service-card">
-                    <h3>Topsoil Preparation and Application</h3>
+                    <h3><i class="fa-solid fa-worm"></i> Topsoil Preparation and Application <i
+                            class="fa-solid fa-worm"></i></h3>
                 </div>
                 <div class="service-card">
-                    <h3>Retaining Walls and Walkways</h3>
+                    <h3><i class="fa-solid fa-trowel-bricks"></i> Retaining Walls and Walkways <i
+                            class="fa-solid fa-trowel-bricks"></i></h3>
                 </div>
                 <div class="service-card">
-                    <h3>Gravel Driveways</h3>
+                    <h3><i class="fa-solid fa-layer-group"></i> Gravel Driveways <i class="fa-solid fa-layer-group"></i>
+                    </h3>
                 </div>
                 <div class="service-card">
-                    <h3>Tree and Shrub Trimming</h3>
+                    <h3><i class="fa-solid fa-scissors"></i> Tree and Shrub Trimming <i
+                            class="fa-solid fa-scissors"></i>
+                    </h3>
                 </div>
                 <div class="service-card">
-                    <h3>Moss and Weed Control</h3>
+                    <h3><i class="fa-solid fa-seedling"></i> Moss and Weed Control <i class="fa-solid fa-seedling"></i>
+                    </h3>
                 </div>
                 <div class="service-card">
-                    <h3>Flower Bed Design</h3>
+                    <h3><i class="fa-solid fa-spa"></i> Flower Bed Design <i class="fa-solid fa-spa"></i></h3>
                 </div>
                 <div class="service-card">
-                    <h3>Pressure Washing</h3>
+                    <h3><i class="fa-solid fa-water"></i> Pressure Washing <i class="fa-solid fa-water"></i></h3>
                 </div>
                 <div class="service-card">
-                    <h3>Roof Cleaning</h3>
+                    <h3><i class="fa-solid fa-house"></i> Roof Cleaning <i class="fa-solid fa-house"></i></h3>
                 </div>
             </div>
         </section>
