--- a/values.html
+++ b/values.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <title>HiteWorks | Values</title>
-    <link rel="stylesheet" href="navigation.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="values-styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,8 +18,32 @@
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
         <a href="values.html">Values</a>
+        <a href="work.html">Our Work</a>
     </nav>
-    <h1>I didn't have time to make this page, but I will do it ASAP!</h1>
+    <h1>Values</h1>
+    <section id="customer-value">
+        <h2>Putting Customers First</h2>
+        <p>
+            At HiteWorks, we prioritize our customers in every decision and design. We believe that understanding your
+            unique vision, needs, and concerns ensures we deliver landscaping solutions that not only beautify your
+            space but also bring lasting satisfaction. Your trust is our foundation, and your happiness is our success.
+        </p>
+    </section>
+
+    <h3>At HiteWorks, we embrace sustainable landscaping by prioritizing native plants and water-conscious
+        designs that enrich the environment while preserving natural resources.</h3>
+    <!--Links to be moved to "values.html"-->
+    <div class="center-links">
+        <a href="https://www.epa.gov/watersense" target="_blank">EPA Water Conservation</a>
+        <!--"_blank" opens link in seperate window-->
+        <a href="https://www.nwf.org/Garden-for-Wildlife/About/Native-Plants" target="_blank">Native Plants
+            Guide</a>
+        <a href="https://garden.org/" target="_blank">National Gardening Association</a>
+    </div>
+
+    <footer>
+        <p>&copy; <strong>2025 HiteWorks.com</strong></p>
+    </footer>
 </body>
 
 </html>
