--- a/about.html
+++ b/about.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HiteWorks | About Us</title>
     <link rel="stylesheet" href="about-styles.css">
-    <link rel="stylesheet" href="navigation.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,6 +22,7 @@
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
         <a href="values.html">Values</a>
+        <a href="work.html">Our Work</a>
     </nav>
     <!--Add info about each person and maybe a picture of each person-->
     <div class="columns">
