--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,11 @@
     <meta name="description"
         content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and professional service!" />
     <link rel="stylesheet" href="contact-styles.css">
-    <link rel="stylesheet" href="navigation.css">
-    <title>HiteWorks | Landscaping, Manual Labor, and Construction</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>HiteWorks | Contact</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,20 +26,10 @@
             <a href="services.html">Services</a>
             <a href="contact.html">Contact</a>
             <a href="values.html">Values</a>
+            <a href="work.html">Our Work</a>
         </nav>
         <!--Temperary logo image. Will be removed.-->
         <img src="images/hiteworks-logo4.png">
-        <!--Will be moved to "values.html"-->
-        <h3>At HiteWorks, we embrace sustainable landscaping by prioritizing native plants <br> and water-conscious
-            designs that enrich the environment while preserving natural resources.</h3>
-        <!--Links to be moved to "values.html"-->
-        <div class="center-links">
-            <a href="https://www.epa.gov/watersense" target="_blank">EPA Water Conservation</a>
-            <!--"_blank" opens link in seperate window-->
-            <a href="https://www.nwf.org/Garden-for-Wildlife/About/Native-Plants" target="_blank">Native Plants
-                Guide</a>
-            <a href="https://garden.org/" target="_blank">National Gardening Association</a>
-        </div>
     </main>
     <footer>
         <p>&copy; <strong>2025 HiteWorks.com</strong></p>
