--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <meta name="description"
         content="Hite Works offers a large selection of different Landscaping, Manual Labor, and Construction services! Competitive Pricing and professional service!" />
     <link rel="stylesheet" href="index-styles.css">
-    <link rel="stylesheet" href="navigation.css">
+    <link rel="stylesheet" href="styles.css">
     <title>HiteWorks | Landscaping, Manual Labor, and Construction</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,6 +22,7 @@
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
         <a href="values.html">Values</a>
+        <a href="work.html">Our Work</a>
     </nav>
 
     <div class="nav-spacer"></div>
