Removed / in front of images in work.html that stopped git from finding the images.

--- a/work.html
+++ b/work.html
@@ -31,13 +31,13 @@
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/images/temp-slide1.png" class="d-block w-100" alt="...">
+                        <img src="images/temp-slide1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption">
                             <h5>Custom Pathway and Planting</h5>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/temp-slide2.png" class="d-block w-100" alt="...">
+                        <img src="images/temp-slide2.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption">
                             <h5>Custom Gazebo and Artifical Pond</h5>
 
