Fixed small bugs across pages and made navbar solid green

--- a/contact.html
+++ b/contact.html
@@ -18,19 +18,19 @@
     <header>
         <h1>Contact</h1>
     </header>
-    <main>
-        <h2>Contact Methods</h2>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
-            <a href="values.html">Values</a>
-            <a href="work.html">Our Work</a>
-        </nav>
-        <!--Temperary logo image. Will be removed.-->
-        <img src="images/hiteworks-logo4.png">
-    </main>
+
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
+        <a href="values.html">Values</a>
+        <a href="work.html">Our Work</a>
+    </nav>
+
+    <h2>Contact Methods:</h2>
+    <h3>To be added</h3>
+
     <footer>
         <p>&copy; <strong>2025 HiteWorks.com</strong></p>
     </footer>
