--- a/values.html
+++ b/values.html
@@ -30,8 +30,11 @@
         </p>
     </section>
 
-    <h3>At HiteWorks, we embrace sustainable landscaping by prioritizing native plants and water-conscious
-        designs that enrich the environment while preserving natural resources.</h3>
+    <p id="sustainability-value">
+        At HiteWorks, we embrace sustainable landscaping by prioritizing native plants and water-conscious
+        designs that enrich the environment while preserving natural resources.
+    </p>
+
     <!--Links to be moved to "values.html"-->
     <div class="center-links">
         <a href="https://www.epa.gov/watersense" target="_blank">EPA Water Conservation</a>
