Major changes. Fixed nav bar.

--- a/values.html
+++ b/values.html
@@ -20,7 +20,11 @@
         <a href="values.html">Values</a>
         <a href="work.html">Our Work</a>
     </nav>
+
+    <div id="nav-spacer"></div>
+
     <h1>Values</h1>
+
     <section id="customer-value">
         <h2>Putting Customers First</h2>
         <p>
@@ -30,12 +34,14 @@
         </p>
     </section>
 
-    <p id="sustainability-value">
-        At HiteWorks, we embrace sustainable landscaping by prioritizing native plants and water-conscious
-        designs that enrich the environment while preserving natural resources.
-    </p>
+    <section id="sustainability-value">
+        <h2>Sustainability</h2>
+        <p>
+            At HiteWorks, we embrace sustainable landscaping by prioritizing native plants and water-conscious
+            designs that enrich the environment while preserving natural resources.
+        </p>
+    </section>
 
-    <!--Links to be moved to "values.html"-->
     <div class="center-links">
         <a href="https://www.epa.gov/watersense" target="_blank">EPA Water Conservation</a>
         <!--"_blank" opens link in seperate window-->
