--- a/services.html
+++ b/services.html
@@ -29,43 +29,43 @@
         <section id="services">
             <div class="services-grid">
                 <div class="service-card">
-                    <h3><i class="fa-solid fa-leaf"></i> Lawn Care and Maintenance <i class="fa-solid fa-leaf"></i></h3>
+                    <h3><i class="fa-solid fa-leaf" aria-hidden="true"></i> Lawn Care and Maintenance <i class="fa-solid fa-leaf" aria-hidden="true"></i></h3>
                 </div>
                 <div class="service-card">
-                    <h3><i class="fa-solid fa-tree"></i> Tree and Shrub Planting <i class="fa-solid fa-tree"></i></h3>
+                    <h3><i class="fa-solid fa-tree" aria-hidden="true"></i> Tree and Shrub Planting <i class="fa-solid fa-tree" aria-hidden="true"></i></h3>
                 </div>
                 <div class="service-card">
-                    <h3><i class="fa-solid fa-trash"></i> Junk Removal <i class="fa-solid fa-trash"></i></h3>
+                    <h3><i class="fa-solid fa-trash" aria-hidden="true"></i> Junk Removal <i class="fa-solid fa-trash" aria-hidden="true"></i></h3>
                 </div>
                 <div class="service-card">
-                    <h3><i class="fa-solid fa-worm"></i> Topsoil Preparation and Application <i
-                            class="fa-solid fa-worm"></i></h3>
+                    <h3><i class="fa-solid fa-worm" aria-hidden="true"></i> Topsoil Preparation and Application <i
+                            class="fa-solid fa-worm" aria-hidden="true"></i></h3>
                 </div>
                 <div class="service-card">
-                    <h3><i class="fa-solid fa-trowel-bricks"></i> Retaining Walls and Walkways <i
-                            class="fa-solid fa-trowel-bricks"></i></h3>
+                    <h3><i class="fa-solid fa-trowel-bricks" aria-hidden="true"></i> Retaining Walls and Walkways <i
+                            class="fa-solid fa-trowel-bricks" aria-hidden="true"></i></h3>
                 </div>
                 <div class="service-card">
-                    <h3><i class="fa-solid fa-layer-group"></i> Gravel Driveways <i class="fa-solid fa-layer-group"></i>
+                    <h3><i class="fa-solid fa-layer-group" aria-hidden="true"></i> Gravel Driveways <i class="fa-solid fa-layer-group"></i>
                     </h3>
                 </div>
                 <div class="service-card">
-                    <h3><i class="fa-solid fa-scissors"></i> Tree and Shrub Trimming <i
-                            class="fa-solid fa-scissors"></i>
+                    <h3><i class="fa-solid fa-scissors" aria-hidden="true"></i> Tree and Shrub Trimming <i
+                            class="fa-solid fa-scissors" aria-hidden="true"></i>
                     </h3>
                 </div>
                 <div class="service-card">
-                    <h3><i class="fa-solid fa-seedling"></i> Moss and Weed Control <i class="fa-solid fa-seedling"></i>
+                    <h3><i class="fa-solid fa-seedling" aria-hidden="true"></i> Moss and Weed Control <i class="fa-solid fa-seedling" aria-hidden="true"></i>
                     </h3>
                 </div>
                 <div class="service-card">
-                    <h3><i class="fa-solid fa-spa"></i> Flower Bed Design <i class="fa-solid fa-spa"></i></h3>
+                    <h3><i class="fa-solid fa-spa" aria-hidden="true"></i> Flower Bed Design <i class="fa-solid fa-spa" aria-hidden="true"></i></h3>
                 </div>
                 <div class="service-card">
-                    <h3><i class="fa-solid fa-water"></i> Pressure Washing <i class="fa-solid fa-water"></i></h3>
+                    <h3><i class="fa-solid fa-water" aria-hidden="true"></i> Pressure Washing <i class="fa-solid fa-water" aria-hidden="true"></i></h3>
                 </div>
                 <div class="service-card">
-                    <h3><i class="fa-solid fa-house"></i> Roof Cleaning <i class="fa-solid fa-house"></i></h3>
+                    <h3><i class="fa-solid fa-house" aria-hidden="true"></i> Roof Cleaning <i class="fa-solid fa-house" aria-hidden="true"></i></h3>
                 </div>
             </div>
         </section>
