--- a/work.html
+++ b/work.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
-    <title>HiteWorks | Values</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HiteWorks | Our Work</title>
+
+    <!-- Bootstrap first -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="…"
+        crossorigin="anonymous">
+
+    <!-- Global styles next (incl. your navbar) -->
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Page-specific overrides last -->
     <link rel="stylesheet" href="work-styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Fonts last -->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
+
 <body>
+    <header>
+        <h1>Our Work</h1>
+    </header>
 
     <nav>
         <a href="index.html">Home</a>
@@ -24,50 +35,45 @@
         <a href="work.html">Our Work</a>
     </nav>
 
-    <main>
-
-        <!--Bootstrap Carousel-->
-        <section id="slider">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="images/temp-slide1.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption">
-                            <h5>Custom Pathway and Planting</h5>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="images/temp-slide2.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption">
-                            <h5>Custom Gazebo and Artifical Pond</h5>
-
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="images/temp-slide3.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption">
-                            <h5>Gravel Pathway and Mulch Beds </h5>
-                        </div>
+    <!--Bootstrap Carousel-->
+    <section id="slider">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/temp-slide1.png" class="d-block w-100" alt="Paver pathway with colorful plants in beds around it">
+                    <div class="carousel-caption">
+                        <h5>Custom Pathway and Planting</h5>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+                <div class="carousel-item">
+                    <img src="images/temp-slide2.png" class="d-block w-100" alt="Custom gazebo with an artificial pond with surrounding flower beds, maple trees, and fur trees">
+                    <div class="carousel-caption">
+                        <h5>Custom Gazebo and Artifical Pond</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/temp-slide3.png" class="d-block w-100" alt="Gravel pathway with mulch beds and native plants">
+                    <div class="carousel-caption">
+                        <h5>Gravel Pathway and Mulch Beds </h5>
+                    </div>
+                </div>
             </div>
-        </section>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
-            </script>
-
-    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
+        </script>
 
     <footer>
         <p>&copy; <strong>2025 HiteWorks.com</strong></p>
